Issue #1641904 by dawehner: Convert views_join to PSR-0 files.

--- a/help/api-tables.html
+++ b/help/api-tables.html
@@ -132,7 +132,7 @@ Above, the fact that 'left_table' is left out lets us know that term_node links 
 Quite a few more fields are available in this definition:
 <dl>
   <dt>handler</dt>
-  <dd>The name of the handler object to use. Defaults to 'views_join'. You may create custom join handlers that may or may not use any of the data below, as they see fit.</dd>
+  <dd>The name of the handler object to use. Defaults to 'Drupal\views\Join'. You may create custom join handlers that may or may not use any of the data below, as they see fit.</dd>
   <dt>table</dt>
   <dd>Table to join. This is optional, and should only be used if the table being referenced is an alias.</dd>
   <dt>field</dt>
