convert filter plugins to annotations

--- a/help/api-example.html
+++ b/help/api-example.html
@@ -77,7 +77,7 @@ function node_example_views_data()  {
       'click sortable' => TRUE,
      ),
     'filter' => array(
-      'handler' => 'views_handler_filter_numeric',
+      'plugin_id' => 'numeric',
     ),
     'sort' => array(
       'handler' => 'views_handler_sort',
@@ -94,7 +94,7 @@ function node_example_views_data()  {
       'click sortable' => TRUE,
      ),
      'filter' => array(
-      'handler' => 'views_handler_filter_string',
+      'plugin_id' => 'string',
      ),
      'argument' => array(
        'handler' => 'views_handler_argument_string',
