right handlers for sort

--- a/help/api-example.html
+++ b/help/api-example.html
@@ -80,7 +80,7 @@ function node_example_views_data()  {
       'plugin_id' => 'numeric',
     ),
     'sort' => array(
-      'handler' => 'views_handler_sort',
+      'plugin_id' => 'standard',
     ),
   );
 
@@ -100,7 +100,7 @@ function node_example_views_data()  {
        'handler' => 'views_handler_argument_string',
      ),
      'sort' => array(
-      'handler' => 'views_handler_sort',
+      'plugin_id' => 'standard',
      ),
   );
 
