lets use annotated handlers in even more places

--- a/help/api-example.html
+++ b/help/api-example.html
@@ -97,7 +97,7 @@ function node_example_views_data()  {
       'plugin_id' => 'string',
      ),
      'argument' => array(
-       'handler' => 'views_handler_argument_string',
+       'plugin_id' => 'string',
      ),
      'sort' => array(
       'plugin_id' => 'standard',
